# haskell-htf-seed

./: .gitignore  .travis.yml  README.md  haskell-htf-seed.cabal
test/: Kata_test.hs
