name:                haskell-htf-seed
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Kata
  build-depends:       base >=4.7 && <5
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite kata_test
  main-is: test/kata_test.hs
  type: exitcode-stdio-1.0
  build-depends: base,
                 HUnit
  hs-source-dirs: .,
                  src
  default-language: Haskell2010
