name:                haskell-htf-seed
version:             0.1
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Kata
  build-depends:       base >=4.7 && <5
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite kata_test
  main-is: test/Kata_test.hs
  type: exitcode-stdio-1.0
  build-depends: base,
                 HTF==0.12.2.3
  hs-source-dirs: .,
                  src
  default-language: Haskell2010
